--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
     </div>
 
     <script>
-        const jsonUrl = ' '; // Replace with your actual GitHub Pages URL
+        const jsonUrl = 'REPLACE_WITH_URL'; // Replace with your actual GitHub Pages URL
 
         // Function to load JSON data from URL
         async function loadData() {
