--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بيانات حساب كيوريس كات</title>
+    <title>CuriousCat Data Viewer</title>
     <script src="https://cdn.tailwindcss.com"></script> <!-- Add Tailwind CDN -->
     <style>
         /* Custom styling for scrollbar in message container */
@@ -22,7 +22,7 @@
     <div class="container mx-auto p-4">
 
         <!-- Page title -->
-        <h1 class="text-3xl font-bold text-center mb-6">بيانات حساب كيوريس كات</h1>
+        <h1 class="text-3xl font-bold text-center mb-6">مشاهد بيانات CuriousCat</h1>
 
         <!-- Search container -->
         <div class="search-container flex justify-center mb-4">
@@ -46,7 +46,7 @@
     </div>
 
     <script>
-        const jsonUrl = 'REPLACE_WITH_URL'; // Replace with your actual GitHub Pages URL
+        const jsonUrl = 'REPLACE_ME'; // Replace with your actual GitHub Pages URL
 
         // Function to load JSON data from URL
         async function loadData() {
