Update and rename curiouscat.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CuriousCat Data Viewer</title>
+    <title>أرشيف أسئلة كيوريس كات لحساب هادي الأحمد</title>
     <script src="https://cdn.tailwindcss.com"></script> <!-- Add Tailwind CDN -->
     <style>
         /* Custom styling for scrollbar in message container */
@@ -22,7 +22,7 @@
     <div class="container mx-auto p-4">
 
         <!-- Page title -->
-        <h1 class="text-3xl font-bold text-center mb-6">مشاهد بيانات CuriousCat</h1>
+        <h1 class="text-3xl font-bold text-center mb-6">أرشيف أسئلة كيوريس كات</h1>
 
         <!-- Search container -->
         <div class="search-container flex justify-center mb-4">
