--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عرض أرشيف كيوريس كات</title>
+    <title>أرشيف أسئلة كيوريس كات</title>
     <script src="https://cdn.tailwindcss.com"></script> <!-- Add Tailwind CDN -->
     <style>
         /* Custom styling for scrollbar in message container */
@@ -22,7 +22,7 @@
     <div class="container mx-auto p-4">
 
         <!-- Page title -->
-        <h1 class="text-3xl font-bold text-center mb-6">عرض أرشيف كيوريس كات</h1>
+        <h1 class="text-3xl font-bold text-center mb-6">أرشيف أسئلة كيوريس كات</h1>
 
         <!-- Search container -->
         <div class="search-container flex justify-center mb-4">
