--- a/curiouscat-getter.html
+++ b/curiouscat-getter.html
@@ -69,7 +69,7 @@
                 return;
             }
 
-            document.getElementById('status').innerText = "جاري سحب البيانات...";
+            document.getElementById('status').innerText = "جار سحب البيانات...";
 
             const profileData = await fetchProfileData(username);
 
