--- a/curiouscat-getter.html
+++ b/curiouscat-getter.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تحميل أرشيف كيوريس كات</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>أدخل اسم المستخدم</h1>
-    <label for="username">اسم المستخدم:</label>
-    <input type="text" id="username" placeholder="Username" required>
-    <button id="fetchData">تحميل الأرشيف</button>
-    <pre id="status"></pre>
+<body class="p-4 bg-gray-100">
+    <h2 class="text-xl font-bold mb-4">أدخل اسم المستخدم</h2>
+    <label for="username" class="block mb-2">اسم المستخدم:</label>
+    <input type="text" id="username" class="border p-2 mb-4 w-full" placeholder="Username" required>
+    <button id="fetchData" class="bg-blue-500 text-white p-2 rounded mr-2">تحميل الأرشيف (JSON)</button>
+    <button id="fetchHtml" class="bg-green-500 text-white p-2 rounded">تحميل الأرشيف (HTML)</button>
+    <pre id="status" class="mt-4"></pre>
 
     <script>
         async function fetchProfileData(username) {
@@ -62,6 +64,42 @@
             document.body.removeChild(a);
         }
 
+        function downloadHtml(filename, data) {
+            const htmlContent = `
+                <!DOCTYPE html>
+                <html lang="ar" dir="rtl">
+                <head>
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+                    <title>${data.username} - أرشيف كيوريس كات</title>
+                </head>
+                <body class="p-4 bg-gray-100">
+                    <h1 class="text-2xl font-bold mb-4">${data.username}</h1>
+                    <p>عدد الإجابات: ${data.answers}</p>
+                    <p>المتابعين: ${data.followers}</p>
+                    <p>المتابعين: ${data.following}</p>
+                    <h2 class="mt-4 mb-2">الرسائل:</h2>
+                    <ul class="list-disc pl-5">
+                        ${data.messages.map(msg => `
+                            <li class="mb-2">
+                                <strong>${msg.timestamp}:</strong> ${msg.message} ${msg.reply ? `<br><strong>الرد:</strong> ${msg.reply}` : ''}
+                            </li>
+                        `).join('')}
+                    </ul>
+                </body>
+                </html>
+            `;
+            const blob = new Blob([htmlContent], { type: "text/html" });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        }
+
         document.getElementById('fetchData').addEventListener('click', async () => {
             const username = document.getElementById('username').value;
             if (!username) {
@@ -98,6 +136,45 @@
             };
 
             downloadJson(`${username}_answers.json`, resultData);
+
+            document.getElementById('status').innerText = "اكتمل التحميل، احفظ الملف.";
+        });
+
+        document.getElementById('fetchHtml').addEventListener('click', async () => {
+            const username = document.getElementById('username').value;
+            if (!username) {
+                document.getElementById('status').innerText = "يرجى إدخال اسم مستخدم صالح.";
+                return;
+            }
+
+            document.getElementById('status').innerText = "جار سحب البيانات...";
+
+            const profileData = await fetchProfileData(username);
+
+            if (profileData.error) {
+                document.getElementById('status').innerText = "لم يتم العثور على المستخدم!";
+                return;
+            }
+
+            const totalAnswers = profileData.answers || 0;
+            if (!totalAnswers) {
+                document.getElementById('status').innerText = "لم يتم العثور على أيّ أسئلة.";
+                return;
+            }
+
+            document.getElementById('status').innerText = `جاري سحب ${totalAnswers} سؤال...`;
+
+            const messages = await fetchMessages(username, totalAnswers);
+
+            const resultData = {
+                username: profileData.username,
+                answers: totalAnswers,
+                followers: profileData.followers,
+                following: profileData.following,
+                messages: messages.length ? messages : '[No Messages]'
+            };
+
+            downloadHtml(`${username}_answers.html`, resultData);
 
             document.getElementById('status').innerText = "اكتمل التحميل، احفظ الملف.";
         });
