--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hi yall
+في هذا الموقع دليلٌ بسيط لتحميل نسخة احتياطية من أرشيف الكيوريس واستعراضها بسهولة
+أولاً: حمل نسخة احتياطية من أسئلتك وإجاباتك
+<a href="https://hadealahmad.github.io/curiouscat-backup/curiouscat-getter.html">تحميل النسخة الاحتياطية</a>
+ثانياً: أنشئ صفحة للعرض عن طريق تقديم رابط للبيانات.
+<a href="https://hadealahmad.github.io/curiouscat-backup/curiouscat-index-creator.html"></a>إنشاء صفحة للتصفح السهل</a>
