--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 في هذا الموقع دليلٌ بسيط لتحميل نسخة احتياطية من أرشيف الكيوريس واستعراضها بسهولة
 أولاً: حمل نسخة احتياطية من أسئلتك وإجاباتك
 <a href="https://hadealahmad.github.io/curiouscat-backup/curiouscat-getter.html">تحميل النسخة الاحتياطية</a>
-ثانياً: أنشئ صفحة للعرض عن طريق تقديم رابط للبيانات.
-<a href="https://hadealahmad.github.io/curiouscat-backup/curiouscat-index-creator.html"></a>إنشاء صفحة للتصفح السهل</a>
+صفحة التحميل تتيح لك خيارين: الأول تحميل البيانات محفوظة بملف HTML منسق قابل للاستخدام مباشرة
+بإمكانك رفع الملف إلى Github Pages مجاناً لإتاحته للتصفح العام، أو استخدامه استخداماً شخصياً على جهازك
+الخيار الثاني تحميل البيانات بصيغة منسّقة JSON لاستخدامه كما تشاء.
