--- a/curiouscat-getter.html
+++ b/curiouscat-getter.html
@@ -5,184 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تحميل أرشيف كيوريس كات</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://raw.githubusercontent.com/hadealahmad/curiouscat-backup/refs/heads/main/downloader.js"></script>
 </head>
-<body class="p-4 bg-gray-100">
+<body class="flex items-center p-4 bg-gray-100 container flex-col">
+    <div class=" w-1/2">
     <h2 class="text-xl font-bold mb-4">أدخل اسم المستخدم</h2>
     <label for="username" class="block mb-2">اسم المستخدم:</label>
     <input type="text" id="username" class="border p-2 mb-4 w-full" placeholder="Username" required>
-    <button id="fetchData" class="bg-blue-500 text-white p-2 rounded mr-2">تحميل الأرشيف (JSON)</button>
+    <div class="flex flex-row gap-2"><button id="fetchData" class="bg-blue-500 text-white p-2 rounded mr-2">تحميل الأرشيف (JSON)</button>
     <button id="fetchHtml" class="bg-green-500 text-white p-2 rounded">تحميل الأرشيف (HTML)</button>
-    <pre id="status" class="mt-4"></pre>
-
-    <script>
-        async function fetchProfileData(username) {
-            const apiUrl = `https://curiouscat.me/api/v2/profile?username=${username}`;
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-                return data;
-            } catch (error) {
-                console.error("خطأ:", error);
-                return { error: "فشل سحب البيانات" };
-            }
-        }
-
-        async function fetchMessages(username, totalAnswers) {
-            let messages = [];
-            let lastTimestamp = 0;
-
-            while (messages.length < totalAnswers) {
-                const apiUrl = `https://curiouscat.me/api/v2/profile?username=${username}&count=100${lastTimestamp ? `&max_timestamp=${lastTimestamp}` : ''}`;
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-
-                if (data.posts && data.posts.length) {
-                    data.posts.forEach(post => {
-                        messages.push({
-                            timestamp: new Date(post.timestamp * 1000).toISOString(),
-                            message: post.comment,
-                            reply: post.reply
-                        });
-                    });
-                    lastTimestamp = data.posts[data.posts.length - 1].timestamp - 1;
-                } else {
-                    break;
-                }
-            }
-
-            return messages;
-        }
-
-        function downloadJson(filename, data) {
-            const blob = new Blob([JSON.stringify(data, null, 4)], { type: "application/json" });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = filename;
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-        }
-
-        function downloadHtml(filename, data) {
-            const htmlContent = `
-                <!DOCTYPE html>
-                <html lang="ar" dir="rtl">
-                <head>
-                    <meta charset="UTF-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-                    <title>${data.username} - أرشيف كيوريس كات</title>
-                </head>
-                <body class="p-6 bg-gray-100 text-gray-800">
-                    <div class="max-w-2xl mx-auto bg-white p-6 rounded-lg shadow-lg">
-                        <h1 class="text-3xl font-bold mb-4 text-center border-b-2 border-gray-300 pb-2">${data.username}</h1>
-                        <p class="text-lg mb-2"><strong>عدد الإجابات:</strong> ${data.answers}</p>
-                        <p class="text-lg mb-2"><strong>المتابعين:</strong> ${data.followers}</p>
-                        <p class="text-lg mb-4"><strong>المتابعين:</strong> ${data.following}</p>
-                        <h2 class="text-2xl font-semibold mb-2">الرسائل:</h2>
-                        <ul class="list-disc pl-5">
-                            ${data.messages.map(msg => `
-                                <li class="mb-4 p-2 border-b border-gray-200">
-                                    <div>
-                                        <strong class="text-blue-600">${msg.timestamp}</strong>: ${msg.message}
-                                    </div>
-                                    ${msg.reply ? `<div class="mt-1 text-gray-700"><strong>الرد:</strong> ${msg.reply}</div>` : ''}
-                                </li>
-                            `).join('')}
-                        </ul>
-                    </div>
-                </body>
-                </html>
-            `;
-            const blob = new Blob([htmlContent], { type: "text/html" });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = filename;
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-        }
-
-        document.getElementById('fetchData').addEventListener('click', async () => {
-            const username = document.getElementById('username').value;
-            if (!username) {
-                document.getElementById('status').innerText = "يرجى إدخال اسم مستخدم صالح.";
-                return;
-            }
-
-            document.getElementById('status').innerText = "جار سحب البيانات...";
-
-            const profileData = await fetchProfileData(username);
-
-            if (profileData.error) {
-                document.getElementById('status').innerText = "لم يتم العثور على المستخدم!";
-                return;
-            }
-
-            const totalAnswers = profileData.answers || 0;
-            if (!totalAnswers) {
-                document.getElementById('status').innerText = "لم يتم العثور على أيّ أسئلة.";
-                return;
-            }
-
-            document.getElementById('status').innerText = `جاري سحب ${totalAnswers} سؤال...`;
-
-            const messages = await fetchMessages(username, totalAnswers);
-
-            const resultData = {
-                username: profileData.username,
-                answers: totalAnswers,
-                followers: profileData.followers,
-                following: profileData.following,
-                twitter: `https://twitter.com/intent/user?user_id=${profileData.userData?.twitterid || ''}`,
-                messages: messages.length ? messages : '[No Messages]'
-            };
-
-            downloadJson(`${username}_answers.json`, resultData);
-
-            document.getElementById('status').innerText = "اكتمل التحميل، احفظ الملف.";
-        });
-
-        document.getElementById('fetchHtml').addEventListener('click', async () => {
-            const username = document.getElementById('username').value;
-            if (!username) {
-                document.getElementById('status').innerText = "يرجى إدخال اسم مستخدم صالح.";
-                return;
-            }
-
-            document.getElementById('status').innerText = "جار سحب البيانات...";
-
-            const profileData = await fetchProfileData(username);
-
-            if (profileData.error) {
-                document.getElementById('status').innerText = "لم يتم العثور على المستخدم!";
-                return;
-            }
-
-            const totalAnswers = profileData.answers || 0;
-            if (!totalAnswers) {
-                document.getElementById('status').innerText = "لم يتم العثور على أيّ أسئلة.";
-                return;
-            }
-
-            document.getElementById('status').innerText = `جاري سحب ${totalAnswers} سؤال...`;
-
-            const messages = await fetchMessages(username, totalAnswers);
-
-            const resultData = {
-                username: profileData.username,
-                answers: totalAnswers,
-                followers: profileData.followers,
-                following: profileData.following,
-                messages: messages.length ? messages : '[No Messages]'
-            };
-
-            downloadHtml(`${username}_answers.html`, resultData);
-
-            document.getElementById('status').innerText = "اكتمل التحميل، احفظ الملف.";
-        });
-    </script>
+    </div>
+    <span id="status"></span>
+    </div>
 </body>
 </html>
