--- a/curiouscat-getter.html
+++ b/curiouscat-getter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تحميل أرشيف كيوريس كات</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://hadealahmad.github.io/curiouscat-backup/downloader.js"></script>
+    <script src="downloader.js"></script>
 </head>
 <body class="flex items-center p-4 bg-gray-100 container flex-col">
     <div class=" w-1/2">
